@@ -715,6 +715,9 @@ packet: 99
 // Give information about terrain/area (debug function)
 gat: 99
 
+// Displays the animation of a skill without really using it (debug function)
+displayskill: 99
+
 // Allows viewing/changing the map's water level (debug function)
 // NOTE: Requires access to the .grf files since the map height properties are not stored in the map cache.
 waterlevel: 99
